# CPP_OS_Support

./: CMakeLists.txt  CMakePresets.json  README.md
CPP_OS_Support/: CMakeLists.txt  main.cpp
CPP_OS_Support/CPP_OS_Support/: os_support.cpp  os_support.h
